Добавляет верстку баннера

--- a/source/index.html
+++ b/source/index.html
@@ -65,6 +65,24 @@
   </header>
   <main class="page__main">
     <h1 class="visually-hidden">&#171;Conquest&#187; - магазин швейцарских часов</h1>
+    <section class="banner centralizer">
+      <div class="banner__content">
+        <h2 class="banner__title">Весна/Лето 2019</h2>
+        <span class="banner__undertitle">Коллекция</span>
+        <p class="banner__text">Швейцарские часы в наличии в Москве и с доставкой по всему миру</p>
+        <a class="banner__link button" href="#">Смотреть каталог</a>
+      </div>
+      <div class="banner__image-wrapper">
+        <img class="banner__image" src="img/desktop/banner-watch.png" width="506" height="806" alt="Швейцарские часы &#171;Rado&#187;">
+        <span class="banner__price" aria-label="Цена в рублях.">
+          22 000
+          <svg width="10" height="12" aria-hidden="true" focusable="false">
+            <use href="img/sprite.svg#ruble" />
+          </svg>
+        </span>
+        <span class="banner__product-description">28 мм диаметр</span>
+      </div>
+    </section>
   </main>
   <footer class="footer"></footer>
 </body>
