Добавляет верстку раздела с товарами

--- a/source/index.html
+++ b/source/index.html
@@ -76,12 +76,57 @@
         <img class="banner__image" src="img/desktop/banner-watch.png" width="506" height="806" alt="Швейцарские часы &#171;Rado&#187;">
         <span class="banner__price" aria-label="Цена в рублях.">
           22 000
-          <svg width="10" height="12" aria-hidden="true" focusable="false">
+          <svg width="10" height="13" aria-hidden="true" focusable="false">
             <use href="img/sprite.svg#ruble" />
           </svg>
         </span>
         <span class="banner__product-description">28 мм диаметр</span>
       </div>
+    </section>
+    <section class="catalog centralizer">
+      <h2 class="catalog__title">Популярные модели</h2>
+      <a class="catalog__link" href="#">Смотреть все</a>
+      <ul class="catalog__list">
+        <li class="card">
+          <h3 class="card__title">RADO</h3>
+          <span class="card__price" aria-label="Цена в рублях.">
+            65 300
+            <svg width="8" height="12" aria-hidden="true" focusable="false">
+              <use href="img/sprite.svg#ruble" />
+            </svg>
+          </span>
+          <a class="card__image-link" href="#">
+            <img class="card__image" src="img/desktop/card-watch-1.png" width="313" height="313" alt="Часы &#171;Rado&#187;">
+          </a>
+          <a class="card__link" href="#">Подробнее</a>
+        </li>
+        <li class="card">
+          <h3 class="card__title">BVLGARI</h3>
+          <span class="card__price" aria-label="Цена в рублях.">
+            81 700
+            <svg width="8" height="12" aria-hidden="true" focusable="false">
+              <use href="img/sprite.svg#ruble" />
+            </svg>
+          </span>
+          <a class="card__image-link" href="#">
+            <img class="card__image" src="img/desktop/card-watch-2.png" width="313" height="313" alt="Часы &#171;BVLGARI&#187;">
+          </a>
+          <a class="card__link" href="#">Подробнее</a>
+        </li>
+        <li class="card">
+          <h3 class="card__title">BVLGARI</h3>
+          <span class="card__price" aria-label="Цена в рублях.">
+            72 700
+            <svg width="8" height="12" aria-hidden="true" focusable="false">
+              <use href="img/sprite.svg#ruble" />
+            </svg>
+          </span>
+          <a class="card__image-link" href="#">
+            <img class="card__image" src="img/desktop/card-watch-3.png" width="313" height="313" alt="Часы &#171;BVLGARI&#187;">
+          </a>
+          <a class="card__link" href="#">Подробнее</a>
+        </li>
+      </ul>
     </section>
   </main>
   <footer class="footer"></footer>
