Добавляет верстку раздела со слайдером

--- a/source/index.html
+++ b/source/index.html
@@ -128,6 +128,35 @@
         </li>
       </ul>
     </section>
+    <section class="about centralizer">
+      <div class="slider">
+        <ul class="slider__list">
+          <li class="slider__item slider__item--current">
+            <img class="slider__image" src="img/desktop/slider-photo-1.jpg" width="521" height="414" alt="Циферблат швейцарских часов.">
+          </li>
+        </ul>
+        <div class="slider__controls">
+          <button class="slider__button slider__button--left" type="button">
+            <span class="visually-hidden">Предыдущий слайд</span>
+            <svg width="7" height="12" aria-hidden="true" focusable="false">
+              <use href="img/sprite.svg#arrow-left" />
+            </svg>
+          </button>
+          <span class="slider__counter">01</span>
+          <button class="slider__button slider__button--right" type="button">
+            <span class="visually-hidden">Следующий слайд</span>
+            <svg width="7" height="12" aria-hidden="true" focusable="false">
+              <use href="img/sprite.svg#arrow-left" />
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="about__content">
+        <h2 class="about__title">Подлинное качество</h2>
+        <p class="about__text">Все часы производятся в Швейцарии и имеют сертификаты качества. Настоящие швейцарские часы — это предмет гордости и престижа.</p>
+        <a class="about__link button button--secondary" href="#">Смотреть каталог</a>
+      </div>
+    </section>
   </main>
   <footer class="footer"></footer>
 </body>
