--- a/source/index.html
+++ b/source/index.html
@@ -16,10 +16,13 @@
 </head>
 <body class="page__body">
   <header class="header centralizer">
-    <a class="logo" href="index.html">
-      <img src="img/logo.svg" width="104" height="26" alt="Логотип &#171;Conquest&#187;">
-    </a>
-    <nav class="main-navigation">
+    <nav class="main-navigation main-navigation--mobile-opened">
+      <a class="main-navigation__logo" href="index.html">
+        <img src="img/logo.svg" width="104" height="26" alt="Логотип &#171;Conquest&#187;">
+      </a>
+      <button class="main-navigation__button" type="button">
+        <span class="main-navigation__button-inner">Открыть меню</span>
+      </button>
       <ul class="main-navigation__list">
         <li class="main-navigation__item">
           <a class="main-navigation__link" href="#">Каталог</a>
@@ -34,35 +37,38 @@
           <a class="main-navigation__link" href="#">Контакты</a>
         </li>
       </ul>
+      <ul class="main-navigation__user-panel user-panel">
+        <li class="user-panel__item">
+          <a class="user-panel__link" href="#">
+            <span class="user-panel__text visually-hidden">Поиск</span>
+            <svg class="user-panel__icon" width="16" height="16" aria-hidden="true" focusable="false">
+              <use href="img/sprite.svg#search" />
+            </svg>
+          </a>
+        </li>
+        <li class="user-panel__item">
+          <a class="user-panel__link" href="#">
+            <span class="user-panel__text visually-hidden">Избранное</span>
+            <div class="user-panel__icon-container">
+              <svg class="user-panel__icon"  width="21" height="18" aria-hidden="true" focusable="false">
+                <use href="img/sprite.svg#heart" />
+              </svg>
+              <span class="user-panel__added-count" aria-label="Количество товаров.">1</span>
+            </div>
+          </a>
+        </li>
+        <li class="user-panel__item">
+          <a class="user-panel__link" href="#">
+            <span class="user-panel__text visually-hidden">Корзина</span>
+            <svg class="user-panel__icon" width="18" height="16" aria-hidden="true" focusable="false">
+              <use href="img/sprite.svg#cart" />
+            </svg>
+          </a>
+        </li>
+      </ul>
     </nav>
-    <ul class="user-panel">
-      <li class="user-panel__item">
-        <a class="user-panel__link" href="#">
-          <span class="visually-hidden">Поиск</span>
-          <svg class="user-panel__icon" width="16" height="16" aria-hidden="true" focusable="false">
-            <use href="img/sprite.svg#search" />
-          </svg>
-        </a>
-      </li>
-      <li class="user-panel__item">
-        <a class="user-panel__link" href="#">
-          <span class="visually-hidden">Избранные товары</span>
-          <svg class="user-panel__icon"  width="21" height="18" aria-hidden="true" focusable="false">
-            <use href="img/sprite.svg#heart" />
-          </svg>
-          <span class="user-panel__added-count" aria-label="Количество товаров.">1</span>
-        </a>
-      </li>
-      <li class="user-panel__item">
-        <a class="user-panel__link" href="#">
-          <span class="visually-hidden">Корзина</span>
-          <svg class="user-panel__icon" width="18" height="16" aria-hidden="true" focusable="false">
-            <use href="img/sprite.svg#cart" />
-          </svg>
-        </a>
-      </li>
-    </ul>
   </header>
+  <!--
   <main class="page__main">
     <h1 class="visually-hidden">&#171;Conquest&#187; - магазин швейцарских часов</h1>
     <section class="banner centralizer">
@@ -205,7 +211,7 @@
   <footer class="footer">
     <div class="footer__wrapper centralizer">
       <div class="footer__info">
-        <a class="logo footer__logo" href="index.html">
+        <a class="footer__logo" href="index.html">
           <img src="img/logo-light.svg" width="121" height="26" alt="Логотип &#171;Conquest&#187;">
         </a>
 
@@ -244,5 +250,7 @@
       </div>
     </div>
   </footer>
+-->
+<script src="js/main.min.js" type="module"></script>
 </body>
 </html>
