Добавляет адаптив раздела со слайдером

--- a/source/index.html
+++ b/source/index.html
@@ -133,7 +133,6 @@
         </li>
       </ul>
     </section>
-    <!--
     <section class="about centralizer">
       <div class="about__slider slider">
         <ul class="slider__list">
@@ -144,14 +143,14 @@
         <div class="slider__controls">
           <button class="slider__button slider__button--left" type="button">
             <span class="visually-hidden">Предыдущий слайд</span>
-            <svg width="7" height="12" aria-hidden="true" focusable="false">
+            <svg class="slider__arrow-icon" width="7" height="12" aria-hidden="true" focusable="false">
               <use href="img/sprite.svg#arrow-left" />
             </svg>
           </button>
           <span class="slider__counter">01</span>
           <button class="slider__button slider__button--right" type="button">
             <span class="visually-hidden">Следующий слайд</span>
-            <svg width="7" height="12" aria-hidden="true" focusable="false">
+            <svg class="slider__arrow-icon" width="7" height="12" aria-hidden="true" focusable="false">
               <use href="img/sprite.svg#arrow-left" />
             </svg>
           </button>
@@ -207,7 +206,6 @@
         </li>
       </ul>
     </section>
-  -->
   </main>
   <!--
   <footer class="footer">
