Оптимизирует и подключит картинки для ретина-экранов

--- a/source/index.html
+++ b/source/index.html
@@ -85,7 +85,8 @@
           </svg>
         </span>
         <span class="banner__product-description">28 мм диаметр</span>
-        <img class="banner__image" src="img/desktop/banner-watch.png" width="506" height="806" alt="Швейцарские часы &#171;Rado&#187;">
+        <img class="banner__image" src="img/desktop/banner-watch.png" width="506" height="806"
+        srcset="img/desktop/banner-watch@2x.png 2x" alt="Швейцарские часы &#171;Rado&#187;">
       </div>
     </section>
     <section class="catalog centralizer">
@@ -101,7 +102,8 @@
             </svg>
           </span>
           <a class="card__image-link" href="#">
-            <img class="card__image" src="img/desktop/card-watch-1.png" width="313" height="313" alt="Часы &#171;Rado&#187;">
+            <img class="card__image" src="img/desktop/card-watch-1.png" width="313" height="313"
+            srcset="img/desktop/card-watch-1@2x.png 2x" alt="Часы &#171;Rado&#187;">
           </a>
           <a class="card__link" href="#">Подробнее</a>
         </li>
@@ -114,7 +116,8 @@
             </svg>
           </span>
           <a class="card__image-link" href="#">
-            <img class="card__image" src="img/desktop/card-watch-2.png" width="313" height="313" alt="Часы &#171;BVLGARI&#187;">
+            <img class="card__image" src="img/desktop/card-watch-2.png" width="313" height="313"
+            srcset="img/desktop/card-watch-2@2x.png 2x" alt="Часы &#171;BVLGARI&#187;">
           </a>
           <a class="card__link" href="#">Подробнее</a>
         </li>
@@ -127,7 +130,8 @@
             </svg>
           </span>
           <a class="card__image-link" href="#">
-            <img class="card__image" src="img/desktop/card-watch-3.png" width="313" height="313" alt="Часы &#171;BVLGARI&#187;">
+            <img class="card__image" src="img/desktop/card-watch-3.png" width="313" height="313"
+            srcset="img/desktop/card-watch-3@2x.png 2x" alt="Часы &#171;BVLGARI&#187;">
           </a>
           <a class="card__link" href="#">Подробнее</a>
         </li>
@@ -137,7 +141,8 @@
       <div class="about__slider slider">
         <ul class="slider__list">
           <li class="slider__item slider__item--current">
-            <img class="slider__image" src="img/desktop/slider-photo-1.jpg" width="521" height="414" alt="Циферблат швейцарских часов.">
+            <img class="slider__image" src="img/desktop/slider-photo-1.jpg" width="521" height="414"
+            srcset="img/desktop/slider-photo-1@2x.jpg 2x" alt="Циферблат швейцарских часов.">
           </li>
         </ul>
         <div class="slider__controls">
@@ -193,16 +198,18 @@
           </li>
         </ul>
       </div>
-
-      <ul class="subscribe__gallary">
+      <ul class="subscribe__gallery">
         <li class="subscribe__image-container">
-          <img class="subscribe__image" src="img/desktop/gallary-photo-1.jpg" width="242" height="228" alt="Фото часов на руке.">
+          <img class="subscribe__image" src="img/desktop/gallery-photo-1.jpg"  width="242" height="228"
+          srcset="img/desktop/gallery-photo-1@2x.jpg 2x" alt="Фото часов на руке.">
         </li>
         <li class="subscribe__image-container">
-          <img class="subscribe__image" src="img/desktop/gallary-photo-2.jpg" width="242" height="228" alt="Фото часов на руке.">
+          <img class="subscribe__image" src="img/desktop/gallery-photo-2.jpg" width="242" height="228"
+          srcset="img/desktop/gallery-photo-2@2x.jpg 2x" alt="Фото часов на руке.">
         </li>
         <li class="subscribe__image-container subscribe__image-container--large">
-          <img class="subscribe__image" src="img/desktop/gallary-photo-3.jpg" width="377" height="460" alt="Фото часов на руке.">
+          <img class="subscribe__image" src="img/desktop/gallery-photo-3.jpg" width="377" height="460"
+          srcset="img/desktop/gallery-photo-3@2x.jpg 2x" alt="Фото часов на руке.">
         </li>
       </ul>
     </section>
